sticky nav and footer

--- a/index.html
+++ b/index.html
@@ -20,6 +20,64 @@
 </head>
 
 <body>
+
+    <header>
+        <div class="container">
+
+            <h1>
+                <a href="#">@fkakatie</a>
+            </h1>
+
+            <p>
+                i like pizza but i wish i could dance.
+            </p>
+
+        </div>
+    </header>
+
+    <div class="navbar">
+        <div class="container">
+            <nav id="topNav">
+                <ul>
+                    <li class="logo">
+                        <a href="#">@fkakatie</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                    <li class="social">
+                        <a href="https://github.com/fkakatie" target="_blank"><i class="fab fa-github"></i></a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+
+<div id="wrapper">
+
+    <section>
+        <div class="container">
+
+            section
+
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+
+            footer
+
+        </div>    
+    </footer>
+
+</div>
     
 </body>
 
