--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
 <body>
 
     <header>
-        <div class="container">
+        <div class="container heroFull">
 
             <h1>
                 <a href="#">@fkakatie</a>
             </h1>
 
-            <p>
-                i like pizza but i wish i could dance.
-            </p>
+            <p>i like pizza but i wish i could dance.</p>
 
         </div>
     </header>
