--- a/portfolio/todayinhistory.html
+++ b/portfolio/todayinhistory.html
@@ -7,6 +7,6 @@
 
     <title>@fkakatie</title>
 
-    <meta http-equiv="refresh" content="0; URL='https://fkakatie.github.io/today-in-history/'" />
+    <!-- <meta http-equiv="refresh" content="0; URL='https://fkakatie.github.io/today-in-history/'" /> -->
 </head>
 </html>
