--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,15 @@
     <title>fkakatie</title>
 
     <!-- FONTS -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,600" rel="stylesheet">
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <!-- <link rel="stylesheet" type="text/css" href="assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/owl.theme.default.min.css"> -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     <!-- MEDIA QUERIES -->
@@ -22,15 +27,15 @@
 <body>
 
     <header>
-        <div class="container heroFull">
 
+        <div class="heroFull container">
             <h1>
-                <a href="#">@fkakatie</a>
+                <a href="#">fkakatie</a>
             </h1>
 
-            <p>i like pizza but i wish i could dance.</p>
-
+            <p>designer. developer. doing it.</p>
         </div>
+
     </header>
 
     <div class="navbar">
@@ -38,49 +43,92 @@
             <nav id="topNav">
                 <ul>
                     <li class="logo">
-                        <a href="#">@fkakatie</a>
+                        <a href="https://fkakatie.github.io/">@fkakatie</a>
                     </li>
                     <li>
-                        <a href="#">About</a>
+                        <a href="https://fkakatie.github.io/">About</a>
                     </li>
                     <li>
-                        <a href="#">Portfolio</a>
+                        <a href="https://fkakatie.github.io/portfolio">Portfolio</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
-                    </li>
-                    <li class="social">
-                        <a href="https://github.com/fkakatie" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://fkakatie.github.io/construction">Contact</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </div>
 
-<div id="wrapper">
+    <div id="wrapper">
 
-    <section>
-        <div class="container">
+        <section>
+            <div class="bio container">
+                <div class="imgFlex">
+                    <img src="https://scontent.fmkc1-1.fna.fbcdn.net/v/t31.0-8/14231911_362732287448377_4840030518003289821_o.jpg?_nc_cat=106&_nc_ht=scontent.fmkc1-1.fna&oh=761f9a0c989d7cb29c26e76bef5fa5ab&oe=5D25095C"
+                        alt="Katie's Profile Picture" class="bioImg">
+                </div>
+                <div>
+                    <h2>Hi, I'm <strong>Katie</strong>. I'm a designer/developer based in Salt Lake City, Utah.</h2>
+                    <p class="big">
+                        I’ve spent the last decade immersed in self-taught front-end programming,
+                        allowing me to balance my lifelong passion for both structure and design.
+                    </p>
+                    <p class="big">
+                        Now I’m building upon that interest and foundation in a full-stack coding boot camp.
+                    </p>
+                </div>
+            </div>
+        </section>
 
-            section
+        <footer>
+            <div class="stats">
+                <div class="container">
+                    <p><strong>FUN FACT:</strong> I've made over <strong id="number">416</strong> git commits this year.
+                        That's more than <span id="numberData">416</span>!</p>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="container">
+                    <div>
+                        <h2><a href="#">fkakatie</a></h2>
+                        <p class="credit">&copy; 2018<span id="copyYear"></span></p>
+                    </div>
+                    <div>
+                        <nav>
+                            <ul>
+                                <li><a href="https://fkakatie.github.io/construction">Contact</a></li>
+                                <li><a href="https://fkakatie.github.io/construction">Privacy Policy</a></li>
+                                <li><a href="https://fkakatie.github.io/construction">Terms & Conditions</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="social">
+                        <div class="bubble">
+                            <a href="https://github.com/fkakatie" target="_blank"><i class="fab fa-github"></i></a>
+                        </div>
+                        <div class="bubble">
+                            <a href="https://www.linkedin.com/in/katie-sexton-582448170/" target="_blank"><i
+                                    class="fab fa-linkedin-in"></i></a>
+                        </div>
+                        <div class="bubble">
+                            <a href="https://fkakatie.github.io/construction"><i class="fab fa-codepen"></i></a>
+                        </div>
+                        <div class="bubble">
+                            <a href="https://fkakatie.github.io/construction"><i class="fab fa-dribbble"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
-        </div>
-    </section>
+    </div>
 
-    <footer>
-        <div class="container">
-
-            footer
-
-        </div>    
-    </footer>
-
-</div>
-    
 </body>
 
 <!-- JAVASCRIPT -->
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+<script src="https://momentjs.com/downloads/moment.min.js"></script>
 <script src="assets/js/script.js"></script>
 
 </html>
