--- a/portfolio.html
+++ b/portfolio.html
@@ -277,7 +277,7 @@
 </body>
 
 <!-- JAVASCRIPT -->
-<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
 <script src="https://momentjs.com/downloads/moment.min.js"></script>
 <script src="assets/js/script.js"></script>
