added scraper to portfolio

--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
         </section>
 
         <footer>
-            <div class="stats">
+            <!-- <div class="stats">
                 <div class="container">
                     <p><strong>FUN FACT:</strong> I've made over <strong id="number">416</strong> git commits this year.
                         That's more than <span id="numberData">416</span>!</p>
                 </div>
-            </div>
+            </div> -->
             <div class="footer">
                 <div class="container">
                     <div>
