--- a/portfolio.html
+++ b/portfolio.html
@@ -104,6 +104,20 @@
                         </div>
                     </div>
                 </div>
+                <!-- ANOTHER PROJECT -->
+                <div class="portfolioProj">
+                    <div class="portfolioImg" style="background-image: url('assets/images/portfolio/scraper.png');
+                        background-size: cover;"></div>
+                    <div class="slant"></div>
+                    <div class="portfolioDesc">
+                        <h3><a href="https://github.com/fkakatie/scraper" target="_blank">Quarry Scraper</a></h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <div class="portfolioTags">
+                            <a href="https://hidden-falls-36984.herokuapp.com" target="_blank">View Project</a>
+                            <a href="https://github.com/fkakatie/scraper" target="_blank"><i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                </div>
                 <!-- PROJECT FOUR -->
                 <div class="portfolioProj">
                     <div class="portfolioImg" style="background-image: url('assets/images/portfolio/constructor-word-guess.png');
@@ -232,13 +246,12 @@
         </section>
 
         <footer>
-            <div class="stats">
+            <!-- <div class="stats">
                 <div class="container">
-                    <p><strong>FUN FACT:</strong> I've made over <strong id="number">416</strong> git commits this year.
-                        That's
-                        more than <span id="numberData">416</span>!</p>
+                    <p><strong>FUN FACT:</strong> I've made over <strong id="number">416</strong> git commits this year. 
+                    That's more than <span id="numberData">416</span>!</p>
                 </div>
-            </div>
+            </div> -->
             <div class="footer">
                 <div class="container">
                     <div>
