portfolio descriptions added

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,6 +63,21 @@
 
         <section>
             <div class="portfolio container">
+                <!-- ANOTHER PROJECT -->
+                <div class="portfolioProj">
+                    <div class="portfolioImg" style="background-image: url('assets/images/portfolio/clicky.png');
+                            background-size: cover;"></div>
+                    <div class="slant"></div>
+                    <div class="portfolioDesc">
+                        <h3><a href="https://github.com/fkakatie/clicky" target="_blank">Super Smash React</a></h3>
+                        <p>Test your Super Smash Bros. memory with this React app!</p>
+                        <div class="portfolioTags">
+                            <a href="https://fkakatie.github.io/clicky" target="_blank">View Project</a>
+                            <a href="https://github.com/fkakatie/clicky" target="_blank"><i
+                                    class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                </div>
                 <!-- PROJECT ONE -->
                 <div class="portfolioProj">
                     <div class="portfolioImg" style="background-image: url('assets/images/portfolio/spotter.png');
@@ -70,10 +85,11 @@
                     <div class="slant"></div>
                     <div class="portfolioDesc">
                         <h3><a href="https://hidden-eyrie-23020.herokuapp.com/" target="_blank">Spotter</a></h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <p>Build your next workout with handlebars and MySQL.</p>
                         <div class="portfolioTags">
                             <a href="https://hidden-eyrie-23020.herokuapp.com/" target="_blank">View Project</a>
-                            <a href="https://github.com/fkakatie/spotter" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/fkakatie/spotter" target="_blank"><i
+                                    class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -84,10 +100,11 @@
                     <div class="slant"></div>
                     <div class="portfolioDesc">
                         <h3><a href="https://guarded-sierra-59729.herokuapp.com/" target="_blank">Friend Finder</a></h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <p>Complete a survey to be matched with your new best friend.</p>
                         <div class="portfolioTags">
                             <a href="https://guarded-sierra-59729.herokuapp.com/" target="_blank">View Project</a>
-                            <a href="https://github.com/fkakatie/friendfinder" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/fkakatie/friendfinder" target="_blank"><i
+                                    class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -97,10 +114,12 @@
                         background-size: cover;"></div>
                     <div class="slant"></div>
                     <div class="portfolioDesc">
-                        <h3><a href="https://github.com/fkakatie/pelicantown-db" target="_blank">Stardew Storefront</a></h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <h3><a href="https://github.com/fkakatie/pelicantown-db" target="_blank">Stardew Storefront</a>
+                        </h3>
+                        <p>See what's for sale in Pelican Town using this CLI node app.</p>
                         <div class="portfolioTags">
-                            <a href="https://github.com/fkakatie/pelicantown-db" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/fkakatie/pelicantown-db" target="_blank"><i
+                                    class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -111,10 +130,11 @@
                     <div class="slant"></div>
                     <div class="portfolioDesc">
                         <h3><a href="https://github.com/fkakatie/scraper" target="_blank">Quarry Scraper</a></h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <p>Scraping GQ with Cheerio to bring the best of "The Rock" to you!</p>
                         <div class="portfolioTags">
                             <a href="https://hidden-falls-36984.herokuapp.com" target="_blank">View Project</a>
-                            <a href="https://github.com/fkakatie/scraper" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/fkakatie/scraper" target="_blank"><i
+                                    class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -124,10 +144,12 @@
                             background-size: cover;"></div>
                     <div class="slant"></div>
                     <div class="portfolioDesc">
-                        <h3><a href="https://github.com/fkakatie/shakespeare-cli-constructor" target="_blank">Shakespeare Hangman</a></h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <h3><a href="https://github.com/fkakatie/shakespeare-cli-constructor"
+                                target="_blank">Shakespeare Hangman</a></h3>
+                        <p>Guess the word that Shakespeare coined using this CLI node app.</p>
                         <div class="portfolioTags">
-                            <a href="https://github.com/fkakatie/shakespeare-cli-constructor" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/fkakatie/shakespeare-cli-constructor" target="_blank"><i
+                                    class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -137,11 +159,13 @@
                                 background-size: cover;"></div>
                     <div class="slant"></div>
                     <div class="portfolioDesc">
-                        <h3><a href="https://github.com/fkakatie/word-guess-game" target="_blank">The Office Hangman</a></h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <h3><a href="https://github.com/fkakatie/word-guess-game" target="_blank">The Office Hangman</a>
+                        </h3>
+                        <p>Test your memory of <em>The Office</em> with this hangman game.</p>
                         <div class="portfolioTags">
                             <a href="https://fkakatie.github.io/word-guess-game/" target="_blank">View Project</a>
-                            <a href="https://github.com/fkakatie/word-guess-game" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/fkakatie/word-guess-game" target="_blank"><i
+                                    class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -152,10 +176,11 @@
                     <div class="slant"></div>
                     <div class="portfolioDesc">
                         <h3><a href="https://github.com/fkakatie/psychic-game" target="_blank">Psychic Game</a></h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <p>Can you guess what letter the computer is thinking?</p>
                         <div class="portfolioTags">
                             <a href="https://fkakatie.github.io/psychic-game/" target="_blank">View Project</a>
-                            <a href="https://github.com/fkakatie/psychic-game" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/fkakatie/psychic-game" target="_blank"><i
+                                    class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -166,9 +191,10 @@
                     <div class="slant"></div>
                     <div class="portfolioDesc">
                         <h3><a href="https://github.com/fkakatie/liri-node-app" target="_blank">Liri Node App</a></h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <p>Meet Liri, a Language Interpretation and Recognition Interface.</p>
                         <div class="portfolioTags">
-                            <a href="https://github.com/fkakatie/liri-node-app" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/fkakatie/liri-node-app" target="_blank"><i
+                                    class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -179,10 +205,11 @@
                     <div class="slant"></div>
                     <div class="portfolioDesc">
                         <h3><a href="https://github.com/fkakatie/trivia-game" target="_blank">Murder Mysteries</a></h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <p>Solve these murder trivia questions before the time runs out!</p>
                         <div class="portfolioTags">
                             <a href="https://fkakatie.github.io/trivia-game/" target="_blank">View Project</a>
-                            <a href="https://github.com/fkakatie/trivia-game" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/fkakatie/trivia-game" target="_blank"><i
+                                    class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -192,11 +219,13 @@
                     background-size: cover;"></div>
                     <div class="slant"></div>
                     <div class="portfolioDesc">
-                        <h3><a href="https://github.com/fkakatie/giftastic" target="_blank">Giftastic Gif Finder</a></h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <h3><a href="https://github.com/fkakatie/giftastic" target="_blank">Giftastic Gif Finder</a>
+                        </h3>
+                        <p>Get gifs from your favorite television using the Giphy API!</p>
                         <div class="portfolioTags">
                             <a href="https://fkakatie.github.io/giftastic/" target="_blank">View Project</a>
-                            <a href="https://github.com/fkakatie/giftastic" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/fkakatie/giftastic" target="_blank"><i
+                                    class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -206,11 +235,13 @@
                     background-size: cover;"></div>
                     <div class="slant"></div>
                     <div class="portfolioDesc">
-                        <h3><a href="https://github.com/fkakatie/train-activity" target="_blank">Train Scheduler</a></h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <h3><a href="https://github.com/fkakatie/train-activity" target="_blank">Train Scheduler</a>
+                        </h3>
+                        <p>Build a fictional train schedule in Firebase.</p>
                         <div class="portfolioTags">
                             <a href="https://fkakatie.github.io/train-activity/" target="_blank">View Project</a>
-                            <a href="https://github.com/fkakatie/train-activity" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/fkakatie/train-activity" target="_blank"><i
+                                    class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -220,11 +251,13 @@
                     background-size: cover;"></div>
                     <div class="slant"></div>
                     <div class="portfolioDesc">
-                        <h3><a href="https://github.com/fkakatie/crystal-collector" target="_blank">Crystal Collector</a></h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <h3><a href="https://github.com/fkakatie/crystal-collector" target="_blank">Crystal
+                                Collector</a></h3>
+                        <p>Steal as many crystals as you can without arousing suspicion.</p>
                         <div class="portfolioTags">
                             <a href="https://fkakatie.github.io/crystal-collector/" target="_blank">View Project</a>
-                            <a href="https://github.com/fkakatie/crystal-collector" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/fkakatie/crystal-collector" target="_blank"><i
+                                    class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -234,11 +267,13 @@
                     background-size: cover;"></div>
                     <div class="slant"></div>
                     <div class="portfolioDesc">
-                        <h3><a href="https://github.com/fkakatie/today-in-history" target="_blank">Today in History</a></h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <h3><a href="https://github.com/fkakatie/today-in-history" target="_blank">Today in History</a>
+                        </h3>
+                        <p>Search the MuffinLabs API for what happened today in history.</p>
                         <div class="portfolioTags">
                             <a href="https://fkakatie.github.io/today-in-history/" target="_blank">View Project</a>
-                            <a href="https://github.com/fkakatie/today-in-history" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/fkakatie/today-in-history" target="_blank"><i
+                                    class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -272,7 +307,8 @@
                             <a href="https://github.com/fkakatie" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                         <div class="bubble">
-                            <a href="https://www.linkedin.com/in/katie-sexton-582448170/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.linkedin.com/in/katie-sexton-582448170/" target="_blank"><i
+                                    class="fab fa-linkedin-in"></i></a>
                         </div>
                         <div class="bubble">
                             <a href="https://fkakatie.github.io/construction"><i class="fab fa-codepen"></i></a>
@@ -290,8 +326,8 @@
 </body>
 
 <!-- JAVASCRIPT -->
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://momentjs.com/downloads/moment.min.js"></script>
 <script src="assets/js/script.js"></script>
 
