portfolio ui tweaks

--- a/construction.html
+++ b/construction.html
@@ -21,6 +21,9 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     <!-- MEDIA QUERIES -->
+    <link rel="stylesheet" media="screen and (max-width: 1121px)" href="assets/css/w1121.css">
+    <link rel="stylesheet" media="screen and (max-width: 795px)" href="assets/css/w795.css">
+    <link rel="stylesheet" media="screen and (max-width: 429px)" href="assets/css/w429.css">
 
 </head>
 
