--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     <!-- MEDIA QUERIES -->
+    <link rel="stylesheet" media="screen and (max-width: 1121px)" href="assets/css/w1121.css">
+    <link rel="stylesheet" media="screen and (max-width: 795px)" href="assets/css/w795.css">
+    <link rel="stylesheet" media="screen and (max-width: 730px)" href="assets/css/w730.css">
+    <link rel="stylesheet" media="screen and (max-width: 429px)" href="assets/css/w429.css">
+    <link rel="stylesheet" media="screen and (max-width: 320px)" href="assets/css/w320.css">
 
 </head>
 
@@ -45,7 +50,7 @@
                     <li class="logo">
                         <a href="https://fkakatie.github.io/">@fkakatie</a>
                     </li>
-                    <li>
+                    <li class="about">
                         <a href="https://fkakatie.github.io/">About</a>
                     </li>
                     <li>
@@ -68,7 +73,7 @@
                         alt="Katie's Profile Picture" class="bioImg">
                 </div>
                 <div>
-                    <h2>Hi, I'm <strong>Katie</strong>. I'm a designer/developer based in Salt Lake City, Utah.</h2>
+                    <h2>Hi, I'm <strong>Katie</strong>. I'm a designer and developer based in Salt Lake City, Utah.</h2>
                     <p class="big">
                         I’ve spent the last decade immersed in self-taught front-end programming,
                         allowing me to balance my lifelong passion for both structure and design.
@@ -93,7 +98,7 @@
                         <h2><a href="#">fkakatie</a></h2>
                         <p class="credit">&copy; 2018<span id="copyYear"></span></p>
                     </div>
-                    <div>
+                    <!-- <div>
                         <nav>
                             <ul>
                                 <li><a href="https://fkakatie.github.io/construction">Contact</a></li>
@@ -101,20 +106,16 @@
                                 <li><a href="https://fkakatie.github.io/construction">Terms & Conditions</a></li>
                             </ul>
                         </nav>
-                    </div>
+                    </div> -->
                     <div class="social">
                         <div class="bubble">
                             <a href="https://github.com/fkakatie" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                         <div class="bubble">
-                            <a href="https://www.linkedin.com/in/katie-sexton-582448170/" target="_blank"><i
-                                    class="fab fa-linkedin-in"></i></a>
+                            <a href="https://codepen.io/fkakatie/"><i class="fab fa-codepen"></i></a>
                         </div>
                         <div class="bubble">
-                            <a href="https://fkakatie.github.io/construction"><i class="fab fa-codepen"></i></a>
-                        </div>
-                        <div class="bubble">
-                            <a href="https://fkakatie.github.io/construction"><i class="fab fa-dribbble"></i></a>
+                            <a href="https://www.linkedin.com/in/katie-sexton-582448170/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
