update linkedin link

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <a href="https://codepen.io/fkakatie/"><i class="fab fa-codepen"></i></a>
                         </div>
                         <div class="bubble">
-                            <a href="https://www.linkedin.com/in/katie-sexton-582448170/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.linkedin.com/in/fkakatie/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
