fix broken img and about text

--- a/contact.html
+++ b/contact.html
@@ -46,16 +46,16 @@
             <nav id="topNav">
                 <ul>
                     <li class="logo">
-                        <a href="https://fkakatie.github.io">@fkakatie</a>
+                        <a href="/">@fkakatie</a>
                     </li>
                     <li class="about">
-                        <a href="https://fkakatie.github.io">About</a>
+                        <a href="/">About</a>
                     </li>
                     <li>
-                        <a href="https://fkakatie.github.io/portfolio">Portfolio</a>
+                        <a href="/portfolio.html">Portfolio</a>
                     </li>
                     <li>
-                        <a href="https://fkakatie.github.io/contact">Contact</a>
+                        <a href="/contact.html">Contact</a>
                     </li>
                 </ul>
             </nav>
