--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
             <nav id="topNav">
                 <ul>
                     <li class="logo">
-                        <a href="https://fkakatie.github.io/">@fkakatie</a>
+                        <a href="/">@fkakatie</a>
                     </li>
                     <li class="about">
-                        <a href="https://fkakatie.github.io/">About</a>
+                        <a href="/">About</a>
                     </li>
                     <li>
-                        <a href="https://fkakatie.github.io/portfolio">Portfolio</a>
+                        <a href="/portfolio.html">Portfolio</a>
                     </li>
                     <li>
-                        <a href="https://fkakatie.github.io/construction">Contact</a>
+                        <a href="/contact.html">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -69,7 +69,7 @@
         <section>
             <div class="bio container">
                 <div class="imgFlex">
-                    <img src="https://scontent.fmkc1-1.fna.fbcdn.net/v/t31.0-8/14231911_362732287448377_4840030518003289821_o.jpg?_nc_cat=106&_nc_ht=scontent.fmkc1-1.fna&oh=761f9a0c989d7cb29c26e76bef5fa5ab&oe=5D25095C"
+                    <img src="https://avatars3.githubusercontent.com/u/43383503?s=460&u=cbbc8950acb0a1e5ddf86a892458e313490fdecb&v=4"
                         alt="Katie's Profile Picture" class="bioImg">
                 </div>
                 <div>
@@ -79,7 +79,10 @@
                         allowing me to balance my lifelong passion for both structure and design.
                     </p>
                     <p class="big">
-                        Now I’m building upon that interest and foundation in a full-stack coding boot camp.
+                        Then I built upon that interest and foundation by completing a full-stack development certificate from the University of Utah.
+                    </p>
+                    <p class="big">
+                        Now I'm continuing to develop those skills as a coding bootcamp teaching assistant.
                     </p>
                 </div>
             </div>
